@@ -4,8 +4,8 @@
 #
 
 # These devices are behind a vxi/gpib gw called "gpibgw"
-dg535		gpibgw:gpib0,15
-hp1630		gpibgw:gpib0,7
+#dg535		gpibgw:gpib0,15
+#hp1630		gpibgw:gpib0,7
 hp3457		gpibgw:gpib0,22
 hp8656		gpibgw:gpib0,7
 hp3488		gpibgw:gpib0,8
@@ -15,6 +15,8 @@ a34110		meter:inst0
 a6032		scope:inst0
 
 # These devices are directly attached to a linux-gpib board
+hp1630		7
+dg535		15
 r5005		5
 hp3455		1
 sr620		15
