@@ -1,0 +1,7 @@
+interface {
+	minor = 0
+	board_type = "ni_usb_b"
+	pad = 0
+	master = yes
+}
+
